Added setting to test configuration
Added remote commands: get-audio-buffer-info, get-machines, save-binary-internal, set-machine, set-window-zoom, get-ocr, TBBlue-get-sprite, TBBlue-get-pattern, TBBlue-get-palette, send-keys-ascii, send-keys-string, tsconf-get-af-port, tsconf-get-vram, get-stack-backtrace
Added QL GUI Style
Added menu to find and set lives in games
Added actions commands to breakpoints, so you can run some actions when a breakpoint is fired
Added up to three AY Chips
Added emulation of other DAC chips appart from Specdrum: Covox, etc
Added setting to set 256kb or 512kb on Spectrum 128k machines
Added setting to set F keys (F1, F2, etc) to run different actions: reset, nmi, exit emulator, etc
Added TBBlue Sprite chip emulation
Added TBBlue Layer2 emulation
Added RTC clock TBBlue/Spectrum Next support for esxdos
Added ZXUno Radasoffset and Radaspadding registers, to do hardware scrolling
Added ESXDOS handler so file operations can be done with files stored on your computer hard disk, and not only on virtual mmc/ide files. Examples can be found on extras/media/spectrum/esxdos_handler/. "Classic" mmc/ide emulation by using virtual mmc/ide files can also be used
Moved folders: docs, media, snap_tests to a "ZEsarUX-extras" package. These folders have been separated from the emulator main distributed file, and the main download have been reduced to 5 MB aprox. The git repository still holds all the files (extras have been moved to folder "extras"), but maybe in the future I will remove them also from the repo.
Moved mmc/ide files location to extras/media/disk_images folder

Improved menu interface:
*menu movement with mouse
*colours are greyscaled when multitask disabled
*allow blinking text, like the input cursor
*new Splash window type which disappears automatically (needs multitask on)

Improved debugger: now you can look at all memory zones, for example: full 128kb ram, 64kb rom of +2A, divmmc ram, etc