@@ -33,9 +33,6 @@ The format of each table entry is as follows:
 
 -cosas para la version 5.1
 
--zxuno: ret nmi 
-cierto...pero lo hago para que sea lo más parecido a la fpga. En la fpga se cambia a bootm=0 cuando se ejecuta cualquier opcode en 69H, independientemente de la instrucción que sea, según dice Antonio
-Yo le agregaré una condición mas, y es que esa instrucción tiene que ser RETN, que es mas lógico (y realmente queda mejor pues es un trozo de código dentro de la emulación de esa instrucción, y no algo a meter en el loop principal)
 
 -agregar paleta prism a sprite view
 
@@ -44,8 +41,6 @@ Yo le agregaré una condición mas, y es que esa instrucción tiene que ser RETN
 IMPORTANTE: ruido al iniciar emulador, no siempre, debido al agregar rutina de autoresize audio puntero
 
 IMPORTANTE: tbblue.mmc deberia estar incluido ? o venir con los extras?
-
--opcion ver paleta colores: ulaplus, otros
 
 -comando ZRCP que muestre paginas de memoria mapeadas. similar a menu debug, las zonas de memoria y las rams/roms mapeadas
 
