@@ -486,7 +486,7 @@ struct s_total_palette_colours {
 typedef struct s_total_palette_colours total_palette_colours;
 
 //Esto usado en menu display->ver paleta total
-#define TOTAL_PALETAS_COLORES 3
+#define TOTAL_PALETAS_COLORES 10
 
 extern total_palette_colours total_palette_colours_array[];
 
